xz-utils (4.999.8beta-115-gadbad2d-1) UNRELEASED; urgency=low

  [ Jonathan Nieder ]
  * Initial package for Debian. (Closes: #518803)
     + debian/rules
        - add minimal rules file (using Debhelper 7), a control file
          describing the binary packages, and an appropriate compat file.
        - use up-to-date config.guess and config.sub files.
        - do not run automake and so on on autobuilders.  Instead, we can
          run them ourselves when we build the source package.
     + debian/README.source:
        - add information about the packaging Git repository.

  [ Mohammed Adnène Trojette ]
  * Prepare for upload to experimental.

 -- Jonathan Nieder <jrnieder@gmail.com>  Thu, 23 Jul 2009 22:32:43 -0500