@@ -3,7 +3,7 @@ Section: utils
 Priority: extra
 Maintainer: Jonathan Nieder <jrnieder@gmail.com>
 Uploaders: Mohammed Adnène Trojette <adn+deb@diwi.org>
-Build-Depends: debhelper (>= 7.0.50), autotools-dev
+Build-Depends: debhelper (>= 7.3.0), autotools-dev
 Standards-Version: 3.8.2
 Vcs-Browser: http://git.debian.org/?p=collab-maint/xz.git
 Vcs-Git: git://git.debian.org/collab-maint/xz.git
